more android fixes